# Convergio

./: .gitignore  2026Plan.md  AGENTS.md  BACKEND_MIGRATION_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  Dockerfile.production  ExecutionPlan.md  FRONTEND_NEW_ARCHITECTURE.md  HELLO.txt  LICENSE  MIGRATION_COMPLETE.md  MIGRATION_COMPLETE_SUMMARY.md  MIGRATION_PLAN.md  MISSION.md  MigrationPlanDec27.md  README.md  RESTRUCTURE-INSTRUCTIONS.md  TASK.md  WORKSPACE-SPLIT-FULL-HISTORY.md  WORKSPACE-SPLIT.md  package-lock.json  package.json  pnpm-lock.yaml  pytest.ini  tsconfig.base.json
daemon/: Cargo.toml
daemon/config/: inference-models.toml
daemon/crates/convergio-agent-runtime/: Cargo.toml
daemon/crates/convergio-agent-runtime/src/: concurrency.rs  ext.rs  harness.rs  lib.rs  monitor_helpers.rs  reaper.rs  respawn.rs  routes.rs  schema.rs  spawn_monitor.rs  spawn_routes.rs  spawner.rs  types.rs
daemon/crates/convergio-agents/: Cargo.toml
daemon/crates/convergio-agents/src/: ext.rs  lib.rs  routes.rs  schema.rs  seed.rs  store.rs  types.rs
daemon/crates/convergio-backup/: Cargo.toml
daemon/crates/convergio-backup/src/: export.rs  ext.rs  import.rs  lib.rs  restore.rs  schema.rs  snapshot.rs
daemon/crates/convergio-billing/: Cargo.toml
daemon/crates/convergio-billing/src/: ext.rs  lib.rs  routes.rs  schema.rs
daemon/crates/convergio-build/: Cargo.toml
daemon/crates/convergio-build/src/: builder.rs  ext.rs  lib.rs  routes.rs  types.rs
daemon/crates/convergio-cli/: Cargo.toml
daemon/crates/convergio-cli/src/: cli_agent.rs  cli_agent_format.rs  cli_agent_history.rs  cli_api_list.rs  cli_ask.rs  cli_audit.rs  cli_audit_project.rs  cli_audit_tests.rs  cli_bus.rs  cli_bus_ask.rs  cli_bus_org.rs  cli_bus_watch.rs  cli_capability.rs  cli_channel.rs  cli_chat.rs  cli_cheatsheet.rs  cli_cleanup.rs  cli_commands.rs  cli_create_org.rs  cli_delegation.rs  cli_delegation_tests.rs  cli_domain.rs  cli_http.rs  cli_kb.rs  cli_kernel.rs  cli_launch.rs  cli_lock.rs  cli_memory.rs  cli_mesh_join.rs  cli_ops.rs  cli_ops_tests.rs  cli_org.rs  cli_org_show.rs  cli_plan.rs  cli_plan_handlers.rs  cli_plan_show.rs  cli_plan_template.rs  cli_plan_tests.rs  cli_plan_tree_fmt.rs  cli_project.rs  (+25 more)
daemon/crates/convergio-db/: Cargo.toml
daemon/crates/convergio-db/src/: core_tables.rs  ext.rs  helpers.rs  lib.rs  migration.rs
daemon/crates/convergio-delegation/: Cargo.toml
daemon/crates/convergio-delegation/src/: ext.rs  lib.rs  monitor.rs  pipeline.rs  remote_spawn.rs  routes.rs  types.rs
daemon/crates/convergio-depgraph/: Cargo.toml
daemon/crates/convergio-depgraph/src/: ext.rs  graph.rs  graph_tests.rs  lib.rs  openapi.rs  removal.rs
daemon/crates/convergio-evidence/: Cargo.toml
daemon/crates/convergio-evidence/src/: ext.rs  lib.rs  routes.rs  schema.rs  types.rs
daemon/crates/convergio-file-transport/: Cargo.toml
daemon/crates/convergio-file-transport/src/: ext.rs  lib.rs  rsync.rs
daemon/crates/convergio-http-bridge/: Cargo.toml
daemon/crates/convergio-http-bridge/src/: ext.rs  handlers.rs  health.rs  schema.rs  store.rs  store_tests.rs  types.rs  webhook.rs
daemon/crates/convergio-inference/: Cargo.toml
daemon/crates/convergio-inference/src/: backend.rs  backend_mlx.rs  ext.rs  lib.rs  metrics.rs  model_config.rs  router.rs  router_tests.rs  routes.rs  schema.rs  types.rs
daemon/crates/convergio-ipc/: Cargo.toml
daemon/crates/convergio-ipc/src/: agents.rs  budget.rs  channels.rs  ext.rs  lib.rs  locks.rs  messaging.rs  models.rs  routes.rs  schema.rs  skills.rs  sse.rs
daemon/crates/convergio-kernel/: Cargo.toml
daemon/crates/convergio-kernel/src/: engine.rs  ext.rs  lib.rs  recover.rs  routes.rs  tests.rs  verify.rs
daemon/crates/convergio-longrunning/: Cargo.toml
daemon/crates/convergio-longrunning/src/: ext.rs  heartbeat.rs  lib.rs  routes.rs  schema.rs
daemon/crates/convergio-mcp/: Cargo.toml
daemon/crates/convergio-mcp/src/: handlers.rs  lib.rs  main.rs  protocol.rs  ring.rs  server.rs  server_tests.rs  tests.rs  tools.rs
daemon/crates/convergio-mesh/: Cargo.toml
daemon/crates/convergio-mesh/src/: auth.rs  capability_registry.rs  convergence.rs  delegation.rs  ext.rs  lib.rs  peers_parser.rs  peers_registry.rs  peers_types.rs  routes.rs  schema.rs  sync.rs  sync_apply.rs  sync_loop.rs  transport.rs  types.rs
daemon/crates/convergio-multitenancy/: Cargo.toml
daemon/crates/convergio-multitenancy/src/: ext.rs  lib.rs  schema.rs  secret_isolation.rs
daemon/crates/convergio-observatory/: Cargo.toml
daemon/crates/convergio-observatory/src/: ext.rs  lib.rs  routes.rs  schema.rs  sink.rs
daemon/crates/convergio-orchestrator/: Cargo.toml
daemon/crates/convergio-orchestrator/src/: actions.rs  aggregation_routes.rs  approval.rs  artifact_bundle.rs  artifacts.rs  compensation.rs  evaluation_tests.rs  executor.rs  ext.rs  gates.rs  handlers.rs  handlers_delegation.rs  handlers_learning.rs  lib.rs  plan_hierarchy.rs  plan_review.rs  plan_routes.rs  plan_routes_ext.rs  plan_validate.rs  policy.rs  reactor.rs  reaper.rs  rollback.rs  scaffold.rs  scaffold_gen.rs  scaffold_templates.rs  scaffold_tests.rs  schema.rs  schema_compensation.rs  schema_evaluation.rs  schema_tracking.rs  task_routes.rs  task_routes_tests.rs  types.rs  validator.rs
daemon/crates/convergio-orchestrator/tests/: plan_lifecycle_e2e.rs
daemon/crates/convergio-org/: Cargo.toml
daemon/crates/convergio-org-package/: Cargo.toml
daemon/crates/convergio-org-package/src/: ext.rs  installer.rs  lib.rs  manifest.rs  routes.rs  sandbox_tests.rs  signing.rs
daemon/crates/convergio-org/src/: ext.rs  factory.rs  lib.rs  orgchart.rs  provisioner.rs  repo_scanner.rs  repo_scanner_helpers.rs  routes.rs  (+4 more)
daemon/crates/convergio-prompts/: Cargo.toml
daemon/crates/convergio-scheduler/: Cargo.toml
daemon/crates/convergio-security/: Cargo.toml
daemon/crates/convergio-server/: Cargo.toml
daemon/crates/convergio-telemetry/: Cargo.toml
daemon/crates/convergio-types/: Cargo.toml
daemon/crates/convergio-voice/: Cargo.toml
daemon/src/: main.rs
(+760 files in other folders)
