[workspace]
resolver = "2"
members = [
    "crates/convergio-types",
    "crates/convergio-telemetry",
    "crates/convergio-db",
    "crates/convergio-security",
    "crates/convergio-ipc",
    "crates/convergio-mesh",
    "crates/convergio-server",
    "crates/convergio-cli",
    "crates/convergio-orchestrator",
    "crates/convergio-agents",
    "crates/convergio-kernel",
    "crates/convergio-org",
    "crates/convergio-voice",
    "crates/convergio-prompts",
    "crates/convergio-inference",
    "crates/convergio-org-package",
    "crates/convergio-http-bridge",
    "crates/convergio-depgraph",
    "crates/convergio-longrunning",
    "crates/convergio-mcp",
    "crates/convergio-agent-runtime",
    "crates/convergio-billing",
    "crates/convergio-backup",
    "crates/convergio-multitenancy",
    "crates/convergio-evidence",
    "crates/convergio-observatory",
    "crates/convergio-file-transport",
    "crates/convergio-delegation",
    "crates/convergio-scheduler",
]

[package]
name = "convergio-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "convergio"
path = "src/main.rs"

[dependencies]
convergio-types = { path = "crates/convergio-types" }
convergio-telemetry = { path = "crates/convergio-telemetry" }
convergio-db = { path = "crates/convergio-db" }
convergio-security = { path = "crates/convergio-security" }
convergio-ipc = { path = "crates/convergio-ipc" }
convergio-mesh = { path = "crates/convergio-mesh" }
convergio-server = { path = "crates/convergio-server" }
convergio-orchestrator = { path = "crates/convergio-orchestrator" }
convergio-agents = { path = "crates/convergio-agents" }
convergio-kernel = { path = "crates/convergio-kernel" }
convergio-org = { path = "crates/convergio-org" }
convergio-voice = { path = "crates/convergio-voice" }
convergio-prompts = { path = "crates/convergio-prompts" }
convergio-inference = { path = "crates/convergio-inference" }
convergio-org-package = { path = "crates/convergio-org-package" }
convergio-http-bridge = { path = "crates/convergio-http-bridge" }
convergio-depgraph = { path = "crates/convergio-depgraph" }
convergio-longrunning = { path = "crates/convergio-longrunning" }
convergio-agent-runtime = { path = "crates/convergio-agent-runtime" }
convergio-billing = { path = "crates/convergio-billing" }
convergio-backup = { path = "crates/convergio-backup" }
convergio-multitenancy = { path = "crates/convergio-multitenancy" }
convergio-evidence = { path = "crates/convergio-evidence" }
convergio-observatory = { path = "crates/convergio-observatory" }
convergio-file-transport = { path = "crates/convergio-file-transport" }
convergio-delegation = { path = "crates/convergio-delegation" }
convergio-scheduler = { path = "crates/convergio-scheduler" }
tokio = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio"

[workspace.dependencies]
# Shared across crates — add here, reference in member Cargo.toml as { workspace = true }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
futures-core = "0.3"
libc = "0.2"
dirs = "6"
toml = "0.8"
