[package]
name = "convergio-agents"
description = "Agent catalog, org routing, model preferences"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { path = "../convergio-types" }
convergio-db = { path = "../convergio-db" }
convergio-ipc = { path = "../convergio-ipc" }
convergio-telemetry = { path = "../convergio-telemetry" }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
