[package]
name = "convergio-cli"
description = "cvg CLI — pure HTTP client, zero internal imports"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cvg"
path = "src/main.rs"

[dependencies]
convergio-types = { path = "../convergio-types" }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
