[package]
name = "convergio-cli"
description = "cvg CLI — pure HTTP client, zero internal imports"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cvg"
path = "src/main.rs"

[dependencies]
convergio-types = { path = "../convergio-types" }
reqwest = { workspace = true, features = ["stream"] }
tokio = { workspace = true, features = ["process"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "5"
dialoguer = "0.11"
hostname = "0.4"
toml = "0.8"
url = "2"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
serde_yaml = "0.9"
