[package]
name = "convergio-evidence"
description = "Evidence gate, checklist enforcement, pre-flight validation, workflow automation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { path = "../convergio-types" }
convergio-db = { path = "../convergio-db" }
convergio-telemetry = { path = "../convergio-telemetry" }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
convergio-orchestrator = { path = "../convergio-orchestrator" }
