[package]
name = "convergio-file-transport"
description = "Rsync-based file transport between mesh nodes"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { path = "../convergio-types" }
convergio-db = { path = "../convergio-db" }
convergio-telemetry = { path = "../convergio-telemetry" }
tracing = { workspace = true }
tokio = { workspace = true, features = ["process"] }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
