[package]
name = "convergio-inference"
description = "Inference routing, model selection, budget tracking, token optimization"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { path = "../convergio-types" }
convergio-db = { path = "../convergio-db" }
convergio-ipc = { path = "../convergio-ipc" }
convergio-telemetry = { path = "../convergio-telemetry" }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
