[package]
name = "convergio-ipc"
description = "Message bus, SSE event streaming, agent registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { path = "../convergio-types" }
convergio-db = { path = "../convergio-db" }
convergio-telemetry = { path = "../convergio-telemetry" }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
async-stream = { workspace = true }
futures-core = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
