[package]
name = "convergio-longrunning"
description = "Long-running execution protocol: heartbeat, checkpoint, resume, budget guard, delegation chain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { path = "../convergio-types" }
convergio-db = { path = "../convergio-db" }
convergio-ipc = { path = "../convergio-ipc" }
convergio-telemetry = { path = "../convergio-telemetry" }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
r2d2 = { workspace = true }
axum = { workspace = true }
