[package]
name = "convergio-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "convergio-mcp-server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

[dev-dependencies]
