[package]
name = "convergio-multitenancy"
description = "Multi-tenancy: DB isolation, network whitelist, secret scoping, audit isolation, resource limits"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { path = "../convergio-types" }
convergio-db = { path = "../convergio-db" }
convergio-telemetry = { path = "../convergio-telemetry" }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
axum = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
