[package]
name = "convergio-orchestrator"
description = "Plans, tasks, waves, Thor gate, reaper, workspace management"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { path = "../convergio-types" }
convergio-db = { path = "../convergio-db" }
convergio-ipc = { path = "../convergio-ipc" }
convergio-telemetry = { path = "../convergio-telemetry" }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
libc = { workspace = true }
tokio-util = { workspace = true }
