[package]
name = "convergio-org-package"
description = "Org-as-package ecosystem: install, sandbox, sign, delegate"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { path = "../convergio-types" }
convergio-db = { path = "../convergio-db" }
convergio-security = { path = "../convergio-security" }
convergio-ipc = { path = "../convergio-ipc" }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
convergio-db = { path = "../convergio-db" }
