[package]
name = "convergio-server"
description = "Axum routing shell, extension wiring, middleware"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { path = "../convergio-types" }
convergio-db = { path = "../convergio-db" }
convergio-telemetry = { path = "../convergio-telemetry" }
convergio-security = { path = "../convergio-security" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
rusqlite = { workspace = true }
toml = "0.8"
notify = "6"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "timeout", "limit"] }
tower = { version = "0.4", features = ["timeout"] }
constant_time_eq = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
