[package]
name = "convergio-telemetry"
description = "Tracing, metrics collection, health aggregation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { path = "../convergio-types" }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
